# amass

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
amass/: __init__.py  cli.py
tests/: test_amass.py
