[project]
authors = [
    {name = "James Meakin"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "click",
    "aiohttp",
    "packaging",
    "tomlkit",
    "beautifulsoup4",
]
name = "amass"
version = "0.4.0"
description = "Vendor libraries from cdnjs"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

[project.urls]
repository = "https://github.com/jmsmkn/amass"

[project.scripts]
amass = "amass.cli:cli"

[dependency-groups]
dev = [
    "pytest",
    "pytest-randomly",
    "pytest-cov",
    "pytest-asyncio",
]

[tool.amass]
output = "test_output"

[tool.amass.dependencies]
openseadragon = { version = "==2.4.1", include = ["openseadragon.min.js", "openseadragon.js", "images/*"]}

[tool.isort]
profile = "black"
known_first_party = ["amass", "tests"]
line_length = 79

[tool.black]
line-length = 79
target-version = ['py39']

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "6.0"
testpaths = [
    "tests",
]
python_files = "tests.py test_*.py *_tests.py"
addopts = "--strict-markers --showlocals"
xfail_strict = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py39, py310, py311, py312, py313
[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313
[testenv]
dependency_groups =
    dev
commands =
    {envpython} -m pytest --cov-branch --cov-report term-missing --cov=tests/ --cov=amass/ --basetemp={envtmpdir} {posargs}
"""

[tool.uv]
package = true
