[project]
authors = [
    {name = "James Meakin"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "click",
    "aiohttp",
    "packaging",
    "tomlkit",
    "beautifulsoup4",
]
name = "amass"
version = "0.4.1"
description = "Vendor libraries from cdnjs"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

[project.urls]
repository = "https://github.com/jmsmkn/amass"

[project.scripts]
amass = "amass.cli:cli"

[dependency-groups]
dev = [
    "pytest",
    "pytest-randomly",
    "pytest-cov",
    "pytest-asyncio",
    "pre-commit",
]

[tool.amass]
output = "test_output"

[tool.amass.dependencies]
openseadragon = { version = "==2.4.1", include = ["openseadragon.min.js", "openseadragon.js", "images/*"]}

[tool.isort]
profile = "black"
known_first_party = ["amass", "tests"]
line_length = 79

[tool.black]
line-length = 79
target-version = ['py310']

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "6.0"
testpaths = [
    "tests",
]
python_files = "tests.py test_*.py *_tests.py"
addopts = "--strict-markers --showlocals"
xfail_strict = true

[tool.uv]
package = true
